<resources>
    <string name="app_name">Solares On</string>
    <string name="informe_a_sua_conta_de_energia_em_reais">Informe a sua conta de energia em reais</string>
    <string name="kwh_consumido">Consumo mensal de energia</string>
    <string name="pot_necessaria">Potência Necessária</string>
    <string name="button_on_grid">ON-GRID</string>
    <string name="button_off_grid">OFF-GRID</string>
    <string name="informe_um_numero">Informe um número real com um ponto\nseparando a parte inteira da real.</string>
    <string name="placa_solar_escolhida">Placas Solares Escolhidas</string>
    <string name="paineis">Painéis Solares</string>
    <string name="inversores">Inversores</string>
    <string name="area_necessaria">Área Necessária</string>
    <string name="inversores_escolhidos">Inversores Escolhidos</string>
    <string name="custo_parcial_inversores_paineis">Custo Parcial (Inversores + Paineis)</string>
    <string name="custo_total_de_instalacao">Custo total de instalação</string>
    <string name="geracao_anual_de_energia">Geração anual de energia estimada</string>
    <string name="lucro_payback">Lucro (payback em 25 anos)</string>
    <string name="taxa_de_retorno_de_investimento">Taxa de Retorno de Investimento</string>
    <string name="indice_de_lucratividade">Índice de Lucratividade</string>
    <string name="lcoe">Custo da Energia por KWh (LCOE)</string>
    <string name="simulacao_fotovoltaica">SIMULAÇÃO FOTOVOLTAICA</string>
    <string name="_0_0">0.0</string>
    <string name="dados">Dados</string>
    <string name="instala_o">Instalação</string>
    <string name="analise_custos">Análise de Custos</string>
    <string name="indices_economicos">Índices Econômicos</string>
    <string name="finalizar">Finalizar</string>
    <string name="voltar">Voltar</string>
    <string name="valor_conta_de_luz">Conta de Luz (R$)</string>
    <string name="consumo_conta_de_luz">Consumo (kWh)</string>
    <string name="nome">Nome</string>
    <string name="e_mail">E-mail</string>
    <string name="resultado">Resultado</string>
    <string name="resultados_warning">Os resultados alcançados nessa simulação são aproximações feitas por integrantes do Solares. Diversas variáveis podem alterar o valor real do projeto.</string>
    <string name="consumo_mensal_de_energia_em_reais">Consumo mensal de energia (em reais)</string>
    <string name="consumo_mensal_de_energia">Consumo mensal de energia</string>
    <string name="hora_solar_da_cidade_escolhida">Horas de Sol Pleno da Cidade</string>
    <string name="resultado_por_e_mail">Resultado por E-mail</string>
    <string name="retomar_calculo">Retomar Cálculo</string>
    <string name="sair">Sair</string>
    <string name="pretensao">Qual a sua pretensão de instalar esse tipo de sistema?</string>
    <string name="telefone">Telefone</string>
    <string name="economia_em_25_anos_valor_presente">Economia em 25 anos (Valor presente)</string>
    <string name="taxa_de_retorno_do_investimento">Taxa de Retorno do Investimento</string>
    <string name="ndice_de_lucratividade">Índice de Lucratividade</string>
    <string name="custo_da_energia_solar_lcoe">Custo estimado da energia solar</string>
    <string name="tempo_para_retorno_do_investimento">Tempo para Retorno do Investimento</string>
    <string name="button_ajustar_area"><u>Ajustar Área</u></string>
    <string name="deseja_receber_os_resultados">Deseja receber os resultados por e-mail?</string>
    <string name="sim">SIM</string>
    <string name="nao">NÃO</string>
    <string name="confirmar">Confirmar</string>
    <string name="tarifa_de_energia_da_cidade">Tarifa de energia da cidade</string>
    <string name="modificar_tarifa"><u>Modificar Tarifa</u></string>
    <string name="modificar_consumo"><u>Alterar Consumo</u></string>
    <string name="tarifa">Tarifa</string>
    <string name="nova_tarifa">Tarifa: R$</string>
    <string name="kwh">/ kWh</string>
    <string name="texto_creditos">Conheça outras iniciativas do Projeto Solares!</string>
    <string name="instagram_projeto_solares">\@projeto.solares</string>
    <string name="podcast_solares">SolarCast</string>
    <string name="descricao_logo_do_projeto_solares">Logo do projeto Solares</string>
    <string name="descricao_logo_do_instagram">Logo do instagram</string>
    <string name="descricao_logo_do_spotify">Logo do spotify</string>
    <string name="descricao_poente">Barco movido a energia solar</string>
    <string name="descricao_girassol">Ação do projeto Girassol, uma das áreas do Solares</string>
    <string name="economia_mensal">Economia Mensal</string>
    <string name="custo_parcial_placas_inversores">Custo Parcial (Placas + Inversores)</string>
    <string name="custo_total">Custo Total (Instalação e equipamentos)</string>
    <string name="estimativa_da_geracao_mensal_de_energia">Estimativa da geração mensal de energia</string>
    <string name="potencia_necessaria">Potência Necessária</string>
    <string name="sistema_de_placas_escolhido">Sistema de placas escolhido</string>
    <string name="area_necessaria_para_inst">Área necessária para a instalação</string>
    <string name="sistema_de_inversores_escolhido">Sistema de inversores escolhido</string>
    <string name="sistema_de_controladores_escolhido">Sistema de controladores escolhido</string>
    <string name="consumo_atual">Consumo calculado:</string>
    <string name="novo_consumo">Consumo:</string>
    <string name="recalcular">Recalcular</string>
    <string name="explicacao_alteracao_consumo">O consumo na sua conta de luz está diferente do que estimamos?\nInsira aqui o consumo médio para podermos calcular um valor de tarifa para maior precisão nos cálculos!</string>
    <string name="kwh_consumo">kWh</string>
    <string name="consumo">Consumo</string>
    <string name="titulo_escolher_modulo">Escolher Módulo</string>
    <string name="titulo_escolher_inversor">Escolher Inversor</string>
    <string name="titulo_escolher_controlador">Escolher Controlador</string>
    <string name="continuar">Continuar</string>
    <string name="empresas">Empresas</string>
    <string name="adicionar_item">Adicionar Item</string>
    <string name="lista_equipamento">Lista de Equipamentos</string>
    <string name="quantidade">Quantidade</string>
    <string name="potencia">Potência</string>
    <string name="periodo_uso">Período de Uso</string>
    <string name="wh_dia">Wh/dia</string>
    <string name="showEquipamentos">Equipamentos</string>
    <string name="economico">Econômico</string>
    <string name="bateria">Bateria</string>
    <string name="geracao">Geração</string>
    <string name="equipamentos">Equipamentos</string>
    <string-array name="Modulos">
        <item>335PHK-36 POLI 335W - BYD Solar</item>
        <item>TSM-DE08MII 375W MONO - Trina Solar</item>
        <item>PS400M1H-24TH 400W MONO -	Phono Solar</item>
        <item>CS3W-415P POLI 415W - CanadianSolar</item>
        <item>JKM440M-6TL4-V 440W TIGER PRO MONO - Jinko Solar</item>
    </string-array>
    <string-array name="Inversores">
        <item>EcoSolys (56914–3) - 1kW</item>
        <item>Growatt (68207–0) - 1,5kW</item>
        <item>Growatt (68208–4) - 2kW</item>
        <item>EcoSolys (40867–2) - 2kW</item>
        <item>Growatt (68210–5) - 2,5kW</item>
        <item>Growatt (68211–9) - 3kW</item>
        <item>REFUsol (57196–0) - 1,6kW</item>
        <item>Growatt (68202–0) - 3kW</item>
        <item>REFUsol (57156–8) - 3,3kW</item>
        <item>Growatt (57555–2) - 5kW</item>
        <item>Growatt (57561–9) - 6kW</item>
        <item>Growatt (57562–3) - 8kW</item>
        <item>ABB (31472–8) - 3,3kW</item>
        <item>REFUsol (45943–7) - 5kW</item>
        <item>Fronius (30579–7) - 3kW</item>
        <item>ABB (31473–2) - 4kW</item>
        <item>Fronius (30582–2) - 4kW</item>
        <item>ABB (31476–4) - 5kW</item>
        <item>Fronius (30437–5) - 5kW</item>
        <item>ABB (45315–4) - 6kW</item>
        <item>Fronius (31282–7) - 6kW</item>
        <item>Growatt (97058–4) - 10kW</item>
        <item>Growatt (73046–9) - 15kW</item>
        <item>Growatt (63283–3) - 20kW</item>
        <item>Growatt (117716–7) - 15kW</item>
        <item>Growatt (68201–6) - 25kW</item>
        <item>Growatt (117717–1) - 20kW</item>
        <item>Growatt (117718–5) - 25kW</item>
        <item>Growatt (117719–9) - 30kW</item>
        <item>Growatt (117720–6) - 36kW</item>
        <item>Growatt (63282–9) - 60kW</item>
        <item>Growatt (116874–8) - 100kW</item>
    </string-array>
    <string name="explicacao_valor_inserido_baixo">O valor inserido está próximo ou abaixo do custo de disponibilidade, que é o preço mínimo da conta de energia.\n\nPor esse motivo, um sistema solar não seria financeiramente atrativo para você.</string>
    <string name="saibaa_mais_valor">A Aneel define que todo consumidor de energia elétrica não pode pagar menos do que um valor mínimo na conta mensal,
        mesmo que tenha consumido pouco, ou até nada, durante o mês. Esse valor representa o custo que a concessionária tem com a infraestrutura ao garantir que o consumidor possa
        utilizar a energia.\n\nPor causa disso, se o seu consumo for baixo (próximo desse valor), não se pode diminuir a conta de luz o
        suficiente para o investimento em um sistema fotovoltaico ser economicamente viável.</string>
    <string name="texto_pergunta_para_questionario">Olá! Você teria interesse em uma funcionalidade para cálculos Off Grid neste aplicativo?\n\n Se sim, poderia responder um rápido questionário?</string>
    <string name="SP_popUpJaFoiMostrado">SHARED_PREF_popUpJaFoiMostrado</string>
    <string name="explicacao_tarifa">Usamos por padrão a tarifa média no seu estado.\nSe quiser uma simulação mais precisa, pode alterar a tarifa para o valor exato pago em sua casa:</string>
    <string name="detalhes">Detalhes</string>
    <string name="numero_de_fases">Fase: </string>
    <string name="descricao_imagem_de_alerta">Imagem de alerta</string>
    <string name="descricao_botao_x_fechar">Botão x para fechar</string>
    <string name="descricao_botao_detalhes">Botão para ver detalhes</string>
    <string name="taxa_interna_de_retorno">Taxa Interna de Retorno</string>
    <string name="inserir_o_consumo_em_kwh"><u>Inserir o consumo em kWh</u></string>
    <string name="inserir_o_consumo_em_reais"><u>Inserir o valor da conta de luz (R$)</u></string>
    <string-array name="Fases">
        <item>Monofásico</item>
        <item>Bifásico</item>
        <item>Trifásico</item>
    </string-array>
    <string-array name="Estados">
        <item>AC</item>
        <item>AL</item>
        <item>AP</item>
        <item>AM</item>
        <item>BA</item>
        <item>CE</item>
        <item>DF</item>
        <item>ES</item>
        <item>GO</item>
        <item>MA</item>
        <item>MT</item>
        <item>MS</item>
        <item>MG</item>
        <item>PA</item>
        <item>PB</item>
        <item>PR</item>
        <item>PE</item>
        <item>PI</item>
        <item>RJ</item>
        <item>RN</item>
        <item>RS</item>
        <item>RO</item>
        <item>RR</item>
        <item>SC</item>
        <item>SP</item>
        <item>SE</item>
        <item>TO</item>
    </string-array>
</resources>