<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".activity.ConsumoActivity"
    android:background="@drawable/background_resultados"
    android:id="@+id/layout_consumo"
    >


    <TextView
        android:id="@+id/text_titulo_consumo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_resultado_text"
        android:gravity="center"
        android:text="@string/consumo"
        android:textColor="@color/colorSolaresBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline91"
        app:layout_constraintStart_toStartOf="@+id/guideline90"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />

    <TextView
        android:id="@+id/ACRtext_explicacao_popup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginEnd="32dp"
        android:text="@string/explicacao_alteracao_consumo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline44" />

    <Button
        android:id="@+id/button_recalcular_consumo"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_button_resultado_center"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/recalcular"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline89"
        app:layout_constraintEnd_toStartOf="@+id/guideline91"
        app:layout_constraintHorizontal_bias="0.49"
        app:layout_constraintStart_toStartOf="@+id/guideline90"
        app:layout_constraintTop_toTopOf="@+id/guideline88" />

    <TextView
        android:id="@+id/text_consumo_atual"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="32dp"
        android:text="@string/consumo_atual"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/ACRtext_explicacao_popup" />

    <TextView
        android:id="@+id/text_novo_consumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:text="@string/novo_consumo"
        app:layout_constraintBottom_toBottomOf="@+id/editText_consumo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/editText_consumo" />

    <EditText
        style="@style/MyEditTextStyleArea"
        android:id="@+id/editText_consumo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:textCursorDrawable="@null"
        app:layout_constraintEnd_toStartOf="@+id/text_unidade_consumo"
        app:layout_constraintStart_toEndOf="@+id/text_novo_consumo"
        app:layout_constraintTop_toBottomOf="@+id/text_consumo_atual" />

    <TextView
        android:id="@+id/text_unidade_consumo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/kwh_consumo"
        app:layout_constraintBottom_toBottomOf="@+id/editText_consumo"
        app:layout_constraintStart_toStartOf="@+id/guideline91"
        app:layout_constraintTop_toTopOf="@+id/editText_consumo" />


    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline44"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.25" />


</androidx.constraintlayout.widget.ConstraintLayout>