<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:focusable="true"
    tools:context=".activity.TarifaActivity"
    android:background="@drawable/background_resultados"
    android:id="@+id/ADE_layout_tarifa"
    >


    <TextView
        android:id="@+id/ADE_text_numero_fases"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="16dp"
        android:text="@string/numero_de_fases"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline94" />

    <TextView
        android:id="@+id/ADE_text_titulo_tarifa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_resultado_text"
        android:gravity="center"
        android:text="@string/detalhes"
        android:textColor="@color/colorSolaresBlue"
        app:layout_constraintBottom_toTopOf="@+id/guideline2"
        app:layout_constraintEnd_toStartOf="@+id/guideline91"
        app:layout_constraintStart_toStartOf="@+id/guideline90"
        app:layout_constraintTop_toTopOf="@+id/guideline18" />


    <TextView
        android:id="@+id/ADE_text_explicacao_tarifa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginEnd="32dp"
        android:layout_marginRight="32dp"
        android:text="@string/explicacao_tarifa"
        app:layout_constraintBottom_toTopOf="@+id/guideline95"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline19" />


    <TextView
        android:id="@+id/ADE_text_nova_tarifa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginLeft="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/nova_tarifa"
        app:layout_constraintBottom_toTopOf="@+id/guideline94"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline95" />

    <EditText
        android:id="@+id/ADE_editText_tarifa"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:ems="10"
        android:inputType="numberDecimal"
        android:text=""
        android:theme="@style/MyEditTextStyleArea"
        android:textCursorDrawable="@null"
        app:layout_constraintBottom_toTopOf="@+id/guideline94"
        app:layout_constraintEnd_toStartOf="@+id/ADE_text_unidade_tarifa"
        app:layout_constraintStart_toEndOf="@+id/ADE_text_nova_tarifa"
        app:layout_constraintTop_toTopOf="@+id/guideline95" />

    <TextView
        android:id="@+id/ADE_text_unidade_tarifa"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/kwh"
        app:layout_constraintBottom_toTopOf="@+id/guideline94"
        app:layout_constraintStart_toStartOf="@+id/guideline91"
        app:layout_constraintTop_toTopOf="@+id/guideline95" />


    <Spinner
        android:id="@+id/ADE_spinner_numero_fases"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@color/colorSuperWhite"
        android:spinnerMode="dropdown"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="@+id/ADE_text_numero_fases"
        app:layout_constraintEnd_toStartOf="@+id/guideline91"
        app:layout_constraintStart_toStartOf="@+id/guideline90"
        app:layout_constraintTop_toTopOf="@+id/ADE_text_numero_fases" />


    <Button
        android:id="@+id/ADE_button_recalcular_tarifa"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/background_button_resultado_center"
        android:gravity="center"
        android:padding="5dp"
        android:text="Confirmar"
        android:textAllCaps="false"
        android:textColor="@color/colorWhite"
        app:layout_constraintBottom_toTopOf="@+id/guideline89"
        app:layout_constraintEnd_toStartOf="@+id/guideline91"
        app:layout_constraintStart_toStartOf="@+id/guideline90"
        app:layout_constraintTop_toTopOf="@+id/guideline88" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline94"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.5" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline95"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.41" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline88"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.85" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline89"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.92" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline90"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.25" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline91"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.75" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.12" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.05" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.22" />


</androidx.constraintlayout.widget.ConstraintLayout>